Update azure-pipelines.yml for Azure Pipelines [skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,9 +13,8 @@ variables:
   imageName: 'your-container-image-name:$(build.buildId)'
 
 steps:
-- displayName: 'Tomcat docker build'
-  script: |
+- script: |
     docker build -f Dockerfile -t $(imageName) .
     docker login -u mpradha1 -p Ganesh14 docker.io
     docker push docker.io/pradhanm/tomcat-test
-  
+  displayName: 'Tomcat docker build'
