--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,5 +16,6 @@ steps:
 - script: |
     docker build -f Dockerfile -t $(imageName) .
     docker login -u mpradha1 -p Ganesh14 docker.io
+    docker tag $(imageName) docker.io/pradhanm/tomcat-test
     docker push docker.io/pradhanm/tomcat-test
   displayName: 'Tomcat docker build'
