--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
 trigger:
-- integration
+- master
 
 pool:
   vmImage: 'Ubuntu-16.04'
@@ -15,7 +15,7 @@ variables:
 steps:
 - script: |
     docker build -f Dockerfile -t $(imageName) .
-    docker tag $(imageName) docker.io/pradhanm/tomcat-test:integration
+    docker tag $(imageName) docker.io/pradhanm/tomcat-test
     docker login -u pradhanm -p Ganesh14 docker.io
-    docker push docker.io/pradhanm/tomcat-test:integration
+    docker push docker.io/pradhanm/tomcat-test
   displayName: 'Tomcat docker build'
